@@ -4,15 +4,14 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static com.rogers.rmcdouga.fitg.basegame.units.BaseGameCharacter.*;
+import static com.rogers.rmcdouga.fitg.basegame.units.RebelMilitaryUnit.*;
 import static com.rogers.rmcdouga.fitg.basegame.map.BaseGamePlanet.*;
 
 
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -33,8 +32,8 @@ class CounterLocationsTest {
 	private CounterLocations underTest = new CounterLocations(gameBox);
 	private final StackManager stackMgr = new StackManager();	// Create my own stack manager
 	private final Stack stack = stackMgr.of(Doctor_Sontag, Drakir_Grebb);
-	private final BaseGameEnviron location = Adare.listEnvirons().get(0);
-	private final List<Counter> countersList = List.of(Adam_Starlight, Agan_Rafa, stack);
+	private final BaseGameEnviron location = Adare.listEnvirons().getFirst();
+	private final List<Counter> countersList = List.of(Adam_Starlight, Agan_Rafa, stack, Air_1_0, Air_1_0);
 
 	private final List<PlacedCounter<Counter>> counters = countersList.stream()
 																	  .map(c->underTest.placeCounter(location, c))
@@ -60,24 +59,21 @@ class CounterLocationsTest {
 	}
 
 	@Test
-	void testLocation_present() {
-		Location result = underTest.location(Agan_Rafa);
+	void testLocationOf_present() {
+		Location result = underTest.locationOf(Agan_Rafa).orElseThrow();
 		
 		assertEquals(location, result);
 	}
 
 	@Test
-	void testLocation_notPresent() {
-		NullPointerException ex = assertThrows(NullPointerException.class, ()->underTest.location(Professor_Mareg));
-		String msg = ex.getMessage();
-		assertNotNull(msg);
-		assertThat(msg, allOf(containsString("Couldn't find counter"), containsString(Professor_Mareg.toString())));
+	void testLocationOf_notPresent() {
+		assertTrue(underTest.locationOf(Professor_Mareg).isEmpty());
 		
 	}
 
 	@Test
-	void testLocation_presentInStack() {
-		Location result = underTest.location(Doctor_Sontag);
+	void testLocationOf_presentInStack() {
+		Location result = underTest.locationOf(Doctor_Sontag).orElseThrow();
 		
 		assertEquals(location, result);
 	}
@@ -89,8 +85,8 @@ class CounterLocationsTest {
 		CounterLocations result = underTest.move(Agan_Rafa, newLocation);
 		assertNotNull(result);
 		assertAll(
-				()->shouldBeEquivilent(Set.of(Adam_Starlight, stack), underTest.countersAt(location)),
-				()->shouldBeEquivilent(Set.of(Agan_Rafa), underTest.countersAt(newLocation))
+				()->shouldBeEquivilent(List.of(Adam_Starlight, stack, Air_1_0, Air_1_0), underTest.countersAt(location)),
+				()->shouldBeEquivilent(List.of(Agan_Rafa), underTest.countersAt(newLocation))
 				);
 	}
 	
@@ -101,10 +97,10 @@ class CounterLocationsTest {
 		CounterLocations result = underTest.move(stack, newLocation);
 		assertNotNull(result);
 		assertAll(
-				()->shouldBeEquivilent(Set.of(Adam_Starlight, Agan_Rafa), underTest.countersAt(location)),	// any order
-				()->shouldBeEquivilent(Set.of(stack), underTest.countersAt(newLocation)),
-				()->assertEquals(newLocation, underTest.location(stack)),
-				()->assertEquals(newLocation, underTest.location(Drakir_Grebb))
+				()->shouldBeEquivilent(List.of(Adam_Starlight, Agan_Rafa, Air_1_0, Air_1_0), underTest.countersAt(location)),	// any order
+				()->shouldBeEquivilent(List.of(stack), underTest.countersAt(newLocation)),
+				()->assertSame(newLocation, underTest.locationOf(stack).orElseThrow()),
+				()->assertSame(newLocation, underTest.locationOf(Drakir_Grebb).orElseThrow())
 				);
 	}
 	
@@ -162,6 +158,39 @@ class CounterLocationsTest {
 		assertEquals("Couldn't find counter (Ly_Mantok).", msg);
 	}
 
+	@Test
+	void testLocationOfByType_present() {
+		List<Location> result = underTest.locationOfByType(Air_1_0).toList();
+		
+		assertAll(
+				()->assertThat(result, hasSize(2)),
+				()->assertThat(result, everyItem(equalTo(location)))
+				);
+	}
+	
+	@Test
+	void testLocationOfByType_notPresent() {
+		List<Location> result = underTest.locationOfByType(Professor_Mareg).toList();
+		
+		assertThat(result, is(empty()));
+	}
+
+	@Test
+	void testStackContaining_present() {
+		Counter result = underTest.stackContaining(Doctor_Sontag).orElseThrow();
+		
+		if (result instanceof Stack resultStack) {
+			assertTrue(stack.isEquivalent(resultStack));
+		} else {
+			fail("Expected a Stack but got a " + result.getClass().getSimpleName());
+		}
+	}
+	
+	@Test
+	void testStackContaining_notPresent() {
+		assertTrue(underTest.stackContaining(Adam_Starlight).isEmpty());
+	}
+	
 	private Collection<Counter> toCounter(Collection<PlacedCounter<Counter>> placed) {
 		return placed.stream().map(PlacedCounter::counter).toList();
 	}
@@ -170,9 +199,10 @@ class CounterLocationsTest {
 	private void shouldBeEquivilent(Collection<Counter> expected, Collection<Counter> actual) {
 		Predicate<Counter> isStack = c->c instanceof Stack;
 		Predicate<Counter> notStack = Predicate.not(isStack);
-		Set<Counter> expectedCounters = toStream(expected, notStack).collect(Collectors.toSet());
-		Set<Counter> actualCounters =  toStream(actual, notStack).collect(Collectors.toSet());
-		assertEquals(expectedCounters, actualCounters);
+		assertThat(actual, everyItem(notNullValue()));
+		List<String> expectedCounters = toStream(expected, notStack).map(Counter::id).toList();
+		List<String> actualCounters =  toStream(actual, notStack).map(Counter::id).toList();
+		assertThat(actualCounters, containsInAnyOrder(expectedCounters.toArray(new String[0])));
 		List<Stack> expectedStacks = (List<Stack>)(List<?>)toStream(expected, isStack).toList();
 		List<Stack> actualStacks =  (List<Stack>)(List<?>)toStream(actual, isStack).toList();
 		assertEquals(expectedStacks.size(), actualStacks.size());
@@ -184,6 +214,4 @@ class CounterLocationsTest {
 	private static <T> Stream<T> toStream(Collection<T> counters, Predicate<T> filter) {
 		return counters.stream().filter(filter);
 	}
-	
-	
 }
